when opening a modal, make sure the top part is visible

--- a/plugins/Morpheus/stylesheets/general/_misc.less
+++ b/plugins/Morpheus/stylesheets/general/_misc.less
@@ -37,5 +37,10 @@
 }
 
 .modal.modal-extra-wide {
-  width: 90%;
+  width: 95%;
+  max-height: 90%;
+  top: 5% !important;
+  .ui-confirm {
+    padding: 0 !important;
+  }
 }
